<resources>
   <!-- <string name="app_name">货运快车司机app服务平台</string>-->
    <string name="app_name">货运快车</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reg_xingmingsubject">请输入手机号</string>
    <string name="reg_code">短信验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="input_pass">输入密码</string>
    <string name="input_oldpass">输入旧密码</string>
    <string name="input_newpass">输入新密码(6位以上)</string>
    <string name="tv_update_ok">确定</string>
    <string name="set_pass">输入密码(6位以上)</string>
    <string name="tv_about">\u3000\u3000我们专注为货车司机提供货源，减少货车空载，提升货车司机收益，主要提供身份证认证、位置定位、路线定制、派单提醒、货运签单、保证金支付等。</string>
    <string name="updatecontent">1.VersionCheckLib V2版震撼来袭\n2.链式编程，调用简单\n3.强大的自定义功能，一行代码轻松搞定\n4.欢迎Star和Issue\n5.github:<a href='http://github.com/alexliusheng'>http://github.com/alexliusheng</a></string>
    <string name="custom_content_text">自定义通知栏进度:%d%%/100%%</string>
    <string name="update_title">VersionCheckLib V2版震撼来袭</string>
    <string name="paytype_title">选择支付方式</string>
    <string name="xhz_tips">卸货照请确保车牌号清晰可见！</string>
    <string name="hdz_tips">回单照请确保文字清晰可见！</string>
</resources>
