<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/base_color_text_white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="27dip"
            android:layout_marginRight="27dip"


            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dip"
                android:layout_height="22dp"
                android:layout_marginLeft="7dp"
                android:background="@mipmap/icon_user" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="@null"
                android:digits="0123456789"
                android:hint="@string/reg_xingmingsubject"
                android:inputType="number"
                android:maxLength="11"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:singleLine="true"
                android:textColor="@color/text_color_black"
                android:textColorHint="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/gray_line"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="27dip"
            android:layout_marginRight="27dip"
            android:layout_marginTop="8dp"


            >

            <ImageView
                android:id="@+id/ivinfo"
                android:layout_width="22dip"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="7dp"
                android:background="@mipmap/icon_yanzheng" />

            <EditText
                android:id="@+id/edCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_toRightOf="@+id/ivinfo"
                android:background="@null"
                android:hint="@string/reg_code"
                android:maxLength="11"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="@color/text_color_black"
                android:textColorHint="@color/text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_getCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="7dp"
                android:text="@string/get_code"
                android:textColor="@color/actionbar_color"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/gray_line"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="27dip"
            android:layout_marginRight="27dip"
            android:layout_marginTop="8dp"

            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dip"
                android:layout_height="22dp"
                android:layout_marginLeft="7dp"
                android:background="@mipmap/icon_key" />

            <EditText
                android:id="@+id/editPass_again"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="@null"
                android:hint="@string/input_pass"
                android:maxLength="11"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:singleLine="true"
                android:textColor="@color/text_color_black"
                android:textColorHint="@color/text_color"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/gray_line"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_cz_bg"
            android:text="@string/tv_update_ok"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
